Evaluation Results/AProVE/cncrt/FSE/loop/Signed_Overflow_Error_3_NT/Signed_Overflow_Error_3_NT_Loop0_TestCase1.txt
MAYBE
proof of /FILES_DIR/concretizer/Signed_Overflow_Error_3_NT_Loop0_TestCase1.c
# AProVE Commit ID: 48c83ccb80d5f8312cb92f4aa1b51dc35e247e65 nils 20241118 unpublished


Termination of the given C Problem could not be shown:

(0) C Problem


----------------------------------------

(0)
Obligation:
c file /FILES_DIR/concretizer/Signed_Overflow_Error_3_NT_Loop0_TestCase1.c/FILES_DIR/concretizer/Signed_Overflow_Error_3_NT_Loop0_TestCase1.c:12:18: error: non-ASCII characters are not allowed outside of literals and identifiers
    int number = ???5;
                 ^
1 error generated.

java.io.FileNotFoundException: /tmp/8b71d34d-3466-46ca-85d9-3a5675cb401f (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at aprove.Framework.Input.Translator$TranslatorSkeleton.translate(Translator.java:91)
Runtime: 2278 milliseconds
